[package]
name = "rlife"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal_size = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
termion = "1.5.6"
itertools = "0.10.1"
